# TerminalJobSearch

./: .clang-format  .gitmodules  CMakeLists.txt  shell.nix
src/: companieDB.cpp  companieDB.hpp  companies.cpp  companies.hpp  core.cpp  core.hpp  custom_table.cpp  custom_table.h  main.cpp
